--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="lib/p5.collide2d.min.js"></script>
 
     <script src="src/car.js"></script>
+    <script src="src/parkingLot.js"></script>
     <script src="src/main.js"></script>
 </body>
 
