added and updated neat

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="src/car.js"></script>
     <script src="src/parkingLot.js"></script>
     <script src="src/main.js"></script>
+    <script src="src/neat.js"></script>
 </body>
 
 </html>
